--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>มะแมวสี่ขา</title>
+        <title>ไม้มงคล</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -27,11 +27,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">ลักษณะทั่วไป</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">อุปนิสัย</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">การดูแล</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">ตัวอย่างพันธุ์ที่พบได้ยาก</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">ติดต่อสอบถาม</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">ไม้มงคล</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">ปลูกต้นไม้ตามทิศ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">ไม้ประดับยอดนิยม</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">ไม้มงคลวันเกิด</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">ผู้ควบคุมเว็บไซต์</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,16 +39,16 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Catforever!</div>
-                <div class="masthead-heading text-uppercase">This Website For Cat Lover</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Let's Go!</a>
+                <div class="masthead-subheading">หน้าแรก</div>
+                <div class="masthead-heading text-uppercase">ยินดีต้อนรับเข้าสู่เว็บไซต์ไม้มงคล</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">ไม้มงคล</a>
             </div>
         </header>
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">ลักษณะทั่วไป</h2>
+                    <h2 class="section-heading text-uppercase">ไม้มงคล</h2>
                     <h3 class="section-subheading text-muted">ลักษณะทั่วไปของน้องแมวในพันธุ์ต่างๆ</h3>
                 </div>
                 <div class="row text-center">
@@ -57,7 +57,7 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-cat fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">แมวเปอร์เซีย</h4>
+                        <h4 class="my-3">ไม้ประจำบ้าน</h4>
                         <p class="text-muted">มีขนาดกลางถึงขนาดใหญ่, มีกระดูกที่ใหญ่และแข็งแรง, หัวและหน้ากลม, หน้าผากโหนก แก้มเต็ม ดวงตากลมโต จมูกหัก, มองจากด้านข้างจะเห็นจุดหักระหว่างจมูกกับหน้าผากชัดเจน, เมื่อมองจากด้านหน้าจะเห็นเป็นขีดอยู่ระหว่างดวงตา.</p>
                     </div>
                     <div class="col-md-4">
@@ -65,7 +65,7 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-cat fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">แมวอเมริกัน ชอร์ตแฮร์</h4>
+                        <h4 class="my-3">ปลูกไม้เสริมวาสนา</h4>
                         <p class="text-muted">มีขนาดกลางไปจนถึงขนาดใหญ่, โครงสร้างลำตัวโต มีกล้ามเนื้อแข็งแรง มองเห็นชัดเจน, อกใหญ่ ขาใหญ่, ใบหูมีขอบเป็นทรงกลมมน, ส่วนหัวมีลักษณะรูปไข่, ดวงตากลมโตเป็นสีเขียวมรกต มีลักษณะสีขน และรูปร่างมากกว่า 80 แบบ.</p>
                     </div>
                     <div class="col-md-4">
@@ -73,7 +73,7 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-cat fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">แมวสก็อตติช โฟลด์</h4>
+                        <h4 class="my-3">วันเวลาปลูกไม้มงคล</h4>
                         <p class="text-muted">แบ่งออกเป็น 2 แบบคือ แบบขนสั้นกับแบบขนยาว, ทั้ง 2 แบบจะมีลักษณะตัวกลม หัวกลม มีช่วงคอสั้น ดวงตากลมใหญ่ และมีหูตั้งตรง ไปจนถึงหูพับ, จมูกสันโค้งกว้างรับกับดวงตา, บางตัวมีปากโค้งได้รูปรับกับคางพอดี จึงเป็นที่มาของสมญานามว่า Smiling Cat หรือ แมวยิ้ม.</p>
                     </div>
                 </div>
@@ -83,8 +83,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">อุปนิสัย</h2>
-                    <h3 class="section-subheading text-muted">อุปนิสัยของน้องแมวแต่ละพันธุ์แตกต่างกันออกไป.</h3>
+                    <h2 class="section-heading text-uppercase">ปลูกต้นไม้ตามทิศ</h2>
+                    <h3 class="section-subheading text-muted">ปลูกต้นไม้ตามทิศมีความแตกต่างกันออกไป.</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -97,7 +97,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">แมวเปอร์เซีย</div>
+                                <div class="portfolio-caption-heading">ทักษิณ</div>
                                 <div class="portfolio-caption-subheading text-muted">(Persian)</div>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">แมวอเมริกัน ชอร์ตแฮร์</div>
+                                <div class="portfolio-caption-heading">ทรดี</div>
                                 <div class="portfolio-caption-subheading text-muted">(American Shorthair)</div>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">แมวสก็อตติช โฟลด์</div>
+                                <div class="portfolio-caption-heading">บูรพา</div>
                                 <div class="portfolio-caption-subheading text-muted">(Scottish Fold)</div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">แมววิเชียรมาศ</div>
+                                <div class="portfolio-caption-heading">อาคเนย์</div>
                                 <div class="portfolio-caption-subheading text-muted">(Siamese)</div>
                             </div>
                         </div>
@@ -157,7 +157,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">สฟริงซ์</div>
+                                <div class="portfolio-caption-heading">ประจิม</div>
                                 <div class="portfolio-caption-subheading text-muted">(Sphynx)</div>
                             </div>
                         </div>
@@ -172,8 +172,38 @@
                                 <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">แมวเอ็กโซติก</div>
+                                <div class="portfolio-caption-heading">อีสาน</div>
                                 <div class="portfolio-caption-subheading text-muted">(Exotic)</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                        <!-- Portfolio item 7-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">พายัพ</div>
+                                <div class="portfolio-caption-subheading text-muted">(Siamese)</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                        <!-- Portfolio item 8-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ประจิม</div>
+                                <div class="portfolio-caption-subheading text-muted">(Sphynx)</div>
                             </div>
                         </div>
                     </div>
@@ -184,16 +214,16 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">การดูแล</h2>
-                    <h3 class="section-subheading text-muted">การดูแลน้องแมวพันธุ์ต่างๆ.</h3>
+                    <h2 class="section-heading text-uppercase">ไม้ประดับยอดนิยม</h2>
+                    <h3 class="section-subheading text-muted">ไม้ประดับยอดนิยมมีอะไรบ้าง</h3>
                 </div>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="img-thumbnail img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>(Persian)</h4>
-                                <h4 class="subheading">การดูแลแมวเปอร์เซีย</h4>
+                                <h4>ชวนชม</h4>
+                                <h4 class="subheading">ไม้ประดับยอดนิยมมีอะไรบ้างชวนชม</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">จะต้องดูแลเรื่องขนเป็นพิเศษ แปรงขน เช็ดหน้า และคราบน้ำตาทุกวัน</p></div>
                         </div>
