--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">ไม้มงคล</h2>
-                    <h3 class="section-subheading text-muted">ลักษณะทั่วไปของน้องแมวในพันธุ์ต่างๆ</h3>
+                    <h3 class="section-subheading text-muted">มีความเชื่อว่าต้นไม้บางสายพันธุ์ปลูกแล้วจะมีความเป็นมงคลเสริมโชคลาภ ช่วยเรียกเงินทอง</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-cat fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-snowflake fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">ไม้ประจำบ้าน</h4>
                         <p class="text-muted">สืบเนื่องมาตั้งแต่โบร่ำโบราณที่เชื่อว่าการมีสิ่งมงคลอยู่รอบตัว (มีพันธุ์ไม้มงคลอยู่ภายในบริเวณบ้าน) จะช่วยเสริมสร้างความเป็นสิริมงคลให้กับชีวิต ส่งผลให้ได้พบเจอแต่กับเรื่องดี ๆ เจริญรุ่งเรือง ร่ำรวยทั้งเงินทอง มีสุขภาพและพลานามัยที่แข็งแรง</p>
@@ -63,7 +63,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-cat fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-snowflake fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">ปลูกไม้เสริมวาสนา</h4>
                         <p class="text-muted">การปลูกต้นไม้สามารถช่วยเสริมฮวงจุ้ยบ้านได้อีกด้วยสำหรับใครที่อยากเริ่มจัดสวนไม้มงคล แต่ไม่รู้จะเลือกต้นไม้อะไรดี เพราะแต่ละต้นก็มีความหมายของตัวเองและช่วยเสริมในเรื่องที่แตกต่างกัน</p>
@@ -71,7 +71,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-cat fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-snowflake fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">วันเวลาปลูกไม้มงคล</h4>
                         <p class="text-muted">ตามความเชื่อโบราณแล้ว ได้มีการกล่าวถึงเรื่องของการปลูกต้นไม้ หรือปลูกพืชพันธุ์ ธัญญหาร ด้วย ว่าวันไหนควรปลูกอะไร และเวลาไหนจึงจะดี ผลิดอกออกผล</p>
@@ -281,11 +281,11 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                Take Care
+                                ไม้ประดับ
                                 <br />
-                                Your
+                                สุดสวย
                                 <br />
-                                Cat!
+                                ยอดนิยม
                             </h4>
                         </div>
                     </li>
@@ -640,7 +640,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">ประจิม/h2>
+                                    <h2 class="text-uppercase">ประจิม</h2>
                                     <h2 class="text-uppercase">(ทิศตะวันตก)</h2>
                                     <p class="item-intro text-muted">มีตัวอย่างดังนี้</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
