--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="img-thumbnail img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="img-thumbnail img-fluid" src="assets/img/about/5.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>เขียวหมื่นปี</h4>
@@ -393,7 +393,9 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">ผู้ควบคุมเว็บไซต์</h2>
-                    <h3 class="section-subheading text-muted">หากมีข้อส่งสัยสามารถติดต่อทางเรามาได้เลย</h3>
+                    <h3 class="section-subheading text-muted">นายภีรา สุขเจริญ</h3>
+                    <h3 class="section-subheading text-muted">6504341001106</h3>
+                    <h3 class="section-subheading text-muted">เทคโนโลยีสารสนเทศและการสื่อสาร</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
@@ -456,7 +458,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Catforever &copy; By Peera Sukcharoen</div>
+                    <div class="col-lg-4 text-lg-start">ไม้มงคล &copy; By Peera Sukcharoen</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://www.youtube.com/" aria-label="Youtube"><i class="fab fa-brands fa-youtube"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
