--- a/index.html
+++ b/index.html
@@ -393,9 +393,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">ผู้ควบคุมเว็บไซต์</h2>
-                    <h3 class="section-subheading text-muted">นายภีรา สุขเจริญ</h3>
-                    <h3 class="section-subheading text-muted">6504341001106</h3>
-                    <h3 class="section-subheading text-muted">เทคโนโลยีสารสนเทศและการสื่อสาร</h3>
+                    <h3 class="section-subheading text-muted">นายภีรา สุขเจริญ  6504341001106  เทคโนโลยีสารสนเทศและการสื่อสาร</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
